--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="menu">
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li><a href="">About</a></li>
+                            <li><a href="#about">About</a></li>
                             <li><a href="">Service</a></li>
                             <li><a href="">Skills</a></li>
                             <li><a href="">Team</a></li>
@@ -52,11 +52,28 @@
     <!-- Header part end -->
     <!-- -------------------------------------------------------------------------------------------------------->
     <!-- About Part Start  -->
-    <div class="main_about">
+    <div id="about" class="main_about">
         <div class="child_about">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem aliquam obcaecati, hic cupiditate in ad recusandae non fugit, inventore vero dicta animi odio explicabo error. Laboriosam magni molestias, accusamus fugiat soluta facilis, adipisci velit sapiente delectus saepe praesentium eveniet aspernatur.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo excepturi, suscipit nemo vero fuga iusto nulla reprehenderit laudantium commodi ducimus perferendis est natus sequi rerum fugit nostrum ipsam reiciendis odio animi necessitatibus. Nam nobis dolor modi repellendus, soluta facere officiis obcaecati velit dignissimos voluptatem placeat repellat perspiciatis nostrum numquam? Eos quaerat aliquid minima dolore temporibus ipsa maxime perspiciatis mollitia ad expedita magnam modi ullam dolor nam fugit, nemo ipsum deleniti ab quidem veritatis praesentium exercitationem! Adipisci placeat praesentium odit sed libero, dignissimos dolorem a velit aspernatur, ea laboriosam quibusdam, dolore voluptatum dolorum veritatis in soluta necessitatibus error ratione maiores ducimus?</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim eaque, unde numquam corrupti ipsum id. Inventore earum iure consequatur laudantium, ducimus vitae rerum ut voluptates nostrum perferendis tenetur reiciendis fugit voluptate optio beatae! Esse odit recusandae necessitatibus, consequuntur facilis dolor eius modi voluptatibus beatae doloremque culpa veritatis animi consequatur debitis natus provident vel totam velit facere corrupti ipsam ipsa! Sint ullam similique incidunt totam cupiditate, ipsa repellat hic dolore libero cum possimus maxime, excepturi, ut magni itaque culpa aut veritatis sunt? Deleniti harum neque dolor suscipit accusantium voluptates esse dolores? Saepe maxime dolores, facilis, id minima sapiente odit deserunt aliquam porro aperiam necessitatibus libero voluptas laboriosam dolorum quas animi labore expedita fuga similique repellat quia. Autem architecto, at quidem veritatis aspernatur nesciunt itaque reiciendis harum quibusdam quasi obcaecati asperiores est soluta ea commodi perspiciatis dicta repudiandae omnis voluptatibus quam eius! Voluptatem voluptatibus sed repellendus, nostrum nesciunt possimus a in impedit illum distinctio voluptas aspernatur perferendis inventore dicta, necessitatibus dolorem ipsum, iusto assumenda quas animi quam veritatis. Et ipsum nihil fugiat pariatur officiis provident commodi reiciendis cum, deleniti aperiam eius iure praesentium, magnam quam ad aliquid magni dolores neque velit, doloremque facilis voluptate officia? Est asperiores quidem quisquam, natus quo error nihil dolorum ab nulla temporibus quasi laboriosam ullam magni, dolore doloribus autem quibusdam ipsum aspernatur sapiente, maiores vero ad sunt. Tenetur id possimus eum omnis voluptates consequuntur dolor iste fugit voluptatum doloremque fugiat, facere alias porro dolorem sint perspiciatis! Soluta molestias maxime eos harum facere sapiente accusamus, nesciunt consequuntur modi, doloribus, nihil quia eveniet amet quaerat rerum eius eum. Excepturi sunt repellat sint cumque corrupti explicabo dolore accusamus eaque! Aspernatur quia dicta nisi? Commodi sit voluptates placeat iure quos eveniet ratione beatae accusantium rem vel, quod at itaque impedit autem, inventore laudantium minima doloremque quibusdam modi. Atque commodi ea ad.</p>
+            <div class="about_title">
+                <h2>About me</h2>
+                <div class="about_mini_title">
+                    <span class="first_child"></span>
+                    <span class="second_child">who i am</span>
+                    <span class="this_child"></span>
+                </div>
+            </div>
+            <div class="about_content">
+                <div class="left_content">
+                    <figure>
+                        <img src="https://i.ibb.co/DKwDxT7/IMG-3624-01-1.jpg" alt="about_img_for_portfolio">
+                    </figure>
+                </div>
+                <div class="right_content">
+                    <h2>I'm Morsalin Kausar And I'm a <span class="typing2"></span></h2>
+                    <p>I'm passionate about all things Web Developing. I work hard. I care about writing clean code and I genuinely love to learn. I'm currently looking for the right opportunity to work In an environment that will help me progress into a Full Stack developer.</p>
+                    <button><a href="#">Download Resume</a></button>
+                </div>
+            </div>
         </div>
     </div>
     <!-- About Part End  -->
