--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <!-- project part end  -->
 
     <!-- contact part start  -->
-    <div id="contact" style="margin-top: 150px;" class="main_about">
+    <div id="contact" style="margin-top: 180px;" class="main_about main_contact">
         <div class="child_about">
             <div data-aos="zoom-in-up" class="about_title">
                 <h2>Contact me</h2>
@@ -198,6 +198,14 @@
         </div>
     </div>
     <!-- contact part end  -->
+
+    <!-- footer part start -->
+    <footer class="main_footer">
+        <div class="child_footer">
+            <p>Created By <span>Morsalin Kausar</span> | &copy 2020 All rights reserved.</p>
+        </div>
+    </footer>
+    <!-- footer part end -->
 
     <!-- javascript link -->
     <script src="./app.js"></script>
