--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#">Service</a></li>
-                <li><a href="#">Skills</a></li>
+                <li><a href="./pages/Blog.html">Blog</a></li>
                 <li><a href="#project">Project</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -41,7 +41,7 @@
                             <li><a href="#">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#">Service</a></li>
-                            <li><a href="#">Skills</a></li>
+                            <li><a href="./pages/Blog.html">Blog</a></li>
                             <li><a href="#project">Project</a></li>
                             <li><a href="#contact">Contact</a></li>
                             <!-- <li><a class="resume_download" href="https://drive.google.com/file/d/1DEOBufxmpqMw7o2GrWKzTcBgxVez5Gqn/view?usp=sharing" target="_blank">Download resume</a></li> -->
@@ -118,7 +118,7 @@
                         <p>This is a bicycle shop. Sophisticated bicycles are available here. All bicycles are released from abroad.!</p>
                         <div class="rating-btn">
                             <div class="read_btn">
-                                <a href="#">Read More</a>
+                                <a href="./pages/yokoo-bicycle.html">View Details</a>
                             </div>
                             <div class="rating">
                                 <i class="fas fa-star"></i>
@@ -138,7 +138,7 @@
                         <p>This is a super shop. High quality products are available here. Which are sold at very affordable prices.</p>
                         <div class="rating-btn">
                             <div class="read_btn">
-                                <a href="#">Read More</a>
+                                <a href="./pages/panda.html">View Details</a>
                             </div>
                             <div class="rating">
                                 <i class="fas fa-star"></i>
@@ -151,14 +151,14 @@
                     </div>
                 </div>
                 <div data-aos="fade-left" class="project_content">
-                    <img class="Project_img" src="./images/panguine.png" alt="project_image">
+                    <img class="Project_img" src="./images/honda.png" alt="project_image">
                     <div class="project_body">
-                        <h2>Penguine Fashion</h2>
+                        <h2>Honda CBR</h2>
                         <span>E-commerce Landing Page</span>
                         <p>This is a shoe shop. High quality shoes are available here. These are of very expensive quality. Which lasts much longer.</p>
                         <div class="rating-btn">
                             <div class="read_btn">
-                                <a href="#">Read More</a>
+                                <a href="./pages/honda.html">View Details</a>
                             </div>
                             <div class="rating">
                                 <i class="fas fa-star"></i>
