--- a/pages/honda.html
+++ b/pages/honda.html
@@ -17,21 +17,24 @@
         <section class="project_3_section">
             <div class="project_3_left">
                 <div class="project_3_up">
-                    <img  data-aos="fade-right" src="../images/project-img/honda.png" alt="project_img">
+                    <img id="show_img"  data-aos="fade-right" src="../images/project-img/honda.png" alt="project_img">
                 </div>
                 <div class="project_3_down">
                     <img 
                     data-aos="fade-right" 
                     src="../images/project-img/honda.png"   
                     alt="project_mini_images"
+                    id="first_img"
                     >
                     <img data-aos="fade-up"
                     src="../images/project-img/honda-2.png"  
                     alt="project_mini_images"
+                    id="second_img"
                     >
                     <img data-aos="fade-left" 
                     src="../images/project-img/honda-3.png"
                     alt="project_mini_images"
+                    id="third_img"
                     >
                 </div>
             </div>
@@ -81,7 +84,20 @@
     </main>
 
     <!-- add js page ---------------  -->
-    <script src="../app.js"></script>
+    <script>
+        const loading = document.getElementById("loading");
+        const first_img = document.getElementById("first_img");
+        const second_img = document.getElementById("second_img");
+        const third_img = document.getElementById("third_img");
+        const show_img = document.getElementById("show_img");
+        first_img.addEventListener("click" , _=> show_img.src ="../images/project-img/honda.png")
+        second_img.addEventListener("click" , _=> show_img.src ="../images/project-img/honda-2.png")
+        third_img.addEventListener("click" , _=> show_img.src ="../images/project-img/honda-3.png")
+        
+        // adding loading system ------------------>
+        window.addEventListener("load", _ => loading.style.display = "none");
+
+    </script>
 
       <!-- aos animation  -->
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
