--- a/pages/honda.html
+++ b/pages/honda.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div id="loading"></div>
@@ -55,25 +56,25 @@
                 </div>
                 <div class="project_3_right_down">
                     <a 
-                    data-aos="fade-right"
-                        href="https://honda-cbz.netlify.app/" 
+                        class="animate__animated animate__fadeInLeft"
+                        href="https://bootstrap-nike.netlify.app/#" 
                         target="_blank">
                         Live Website
                     </a>
                     <a 
-                        data-aos="fade-down"
-                        href="https://github.com/MorsalinKausar043/Honda-Cbr/tree/main/honda-cbr-bootstrap-assignment-MorsalinKausar043.git" 
+                        class="animate__animated animate__fadeInDown"
+                        href="https://github.com/MorsalinKausar043/Panda_Website" 
                         target="_blank">
                         Client Code
                     </a>
                     <a 
-                    data-aos="fade-left"
-                        href="https://github.com/MorsalinKausar043/Honda-Cbr/tree/main/honda-cbr-bootstrap-assignment-MorsalinKausar043.git" 
+                        class="animate__animated animate__fadeInRight"
+                        href="https://github.com/MorsalinKausar043/Panda_Website" 
                         target="_blank">
                         BackEnd Code
                     </a>
                     <a 
-                    data-aos="fade-up"
+                        class="animate__animated animate__fadeInUp"
                         href="../index.html" 
                         id="cancel_btn">
                         <i class="fas fa-window-close"></i>
