--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#">Service</a></li>
+                <li><a href="#service">Service</a></li>
                 <li><a href="./pages/Blog.html">Blog</a></li>
                 <li><a href="#project">Project</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -40,7 +40,7 @@
                         <ul class="menu">
                             <li><a href="#">Home</a></li>
                             <li><a href="#about">About</a></li>
-                            <li><a href="#">Service</a></li>
+                            <li><a href="#service">Service</a></li>
                             <li><a href="./pages/Blog.html">Blog</a></li>
                             <li><a href="#project">Project</a></li>
                             <li><a href="#contact">Contact</a></li>
@@ -97,6 +97,46 @@
         </div>
     </div>
     <!-- About Part End  -->
+
+    <!-- Service part start  -->
+    <section id="service" class="main_services">
+        <div class="child_service">
+            <div class="service_title">
+                <div data-aos="zoom-in-down" class="about_title">
+                    <h2>My Serivce</h2>
+                    <div class="about_mini_title">
+                        <span class="first_child"></span>
+                        <span class="second_child">what i provide</span>
+                        <span class="this_child"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="service_contents">
+                <div data-aos="fade-right" class="service_content">
+                    <p><i class="fas fa-paint-brush"></i></p>
+                    <h1>Web Design</h1>
+                    <p>
+                        I offer web design services catered to your exact need, ensuring a fantastic quality product at an affordable once-off price while preserving quality.
+                    </p>
+                </div>
+                <div data-aos="fade-up" class="service_content">
+                    <p><i class="fas fa-code"></i></p>
+                    <h1>Web Development</h1>
+                    <p>
+                        You came to the right place because I am a skilled node JS web developer. I have experience working on MongoDB databases.
+                    </p>
+                </div>
+                <div data-aos="fade-left" class="service_content">
+                    <p><i class="fab fa-react"></i></p>
+                    <h1>Mern Development</h1>
+                    <p>
+                        I am a professional MERN stack developer I have a proven track of working on projects from start to deployment.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Service part end  -->
 
     <!-- project part start  -->
     <div id="project" class="main_project">
